--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.1"
+    "mongoose": "^4.13.1",
+    "validator": "^9.1.2"
   },
   "devDependencies": {
     "expect": "^21.2.1",
